--- a/camera/src/main/AndroidManifest.xml
+++ b/camera/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ka.masato.library.device.camera">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
     <application>
         <uses-library android:name="com.google.android.things"/>
     </application>
