--- a/objectdetection/build.gradle
+++ b/objectdetection/build.gradle
@@ -1,18 +1,36 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
+
+def versionMajor = 0
+def versionMinor = 1
+def versionPatch = 0
+
+group 'ka.masato.library.ai'
+archivesBaseName = 'ssddetection'
+version "${versionMajor}.${versionMinor}.${versionPatch}"
+
+def libraryId = 'ssddeteciton'
+def siteUrl = 'https://github.com/masato-ka/object-deteciton-sample'
+def githubUrl = 'https://github.com/masato-ka/object-deteciton-sample'
 
 android {
     compileSdkVersion 26
     buildToolsVersion '27.0.3'
 
-
     defaultConfig {
         minSdkVersion 26
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
-
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     buildTypes {
@@ -36,3 +54,52 @@ dependencies {
     compileOnly 'com.google.android.things:androidthings:+'
 
 }
+
+
+
+bintray {
+    user = project.hasProperty('bintray_user') ? bintray_user : ''
+    key = project.hasProperty('bintray_key') ? bintray_key : ''
+    configurations = ['archives']
+
+    pkg {
+        repo = 'android-things-support'
+        name = project.group + '.' + libraryId
+        licenses = ['MIT']
+        websiteUrl = siteUrl
+        issueTrackerUrl = githubUrl + '/blob/master/LICENSE'
+        vcsUrl = githubUrl + '.git'
+        issueTrackerUrl = githubUrl + '/issues'
+        publicDownloadNumbers = true
+        version {
+            name = project.version
+        }
+    }
+}
+
+install {
+    repositories.mavenInstaller {
+        pom.project {
+            name libraryId
+            url siteUrl
+
+            packaging 'aar'
+            groupId project.group
+            artifactId libraryId
+            version project.version
+
+            licenses {
+                license {
+                    name 'The MIT License'
+                    url 'https://opensource.org/licenses/MIT'
+                    distribution 'repo'
+                }
+            }
+            scm {
+                connection githubUrl + '.git'
+                url githubUrl
+            }
+        }
+    }
+}
+
