--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ project.ext.TMP_DIR   = project.buildDir.toString() + '/downloads'
 
 // Download default models; if you wish to use your own models then
 // place them in the "assets" directory and comment out this line.
-apply from: "download-models.gradle"
+//apply from: "download-models.gradle"
 
 
 dependencies {
